# mcp-arXiv-server

./: Dockerfile  LICENSE  README.md  main.py  pyproject.toml  research_server.py  sse_demo.html
src/arxiv_mcp_server/: __init__.py  config.py  server.py  sse_server.py
src/arxiv_mcp_server/tools/: search.py
tools/: __init__.py  download.py  list_papers.py
