[project]
name = "mcp-arXiv-server"
version = "0.1.0"
description = "A FastMCP server for searching, retrieving, and managing academic papers from arXiv. Provides tools for searching papers by topic, extracting detailed information, and organizing research materials."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "arxiv>=2.2.0",
    "mcp>=1.7.1",
]
